--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_SRV = http://core.himura.xyz
+VUE_APP_SRV = https://core.himura.xyz
 VUE_APP_VISITOR_SRV = https://himura.xyz
-VUE_APP_ADMIN_SRV = http://admin.himura.xyz
+VUE_APP_ADMIN_SRV = https://admin.himura.xyz
